# todo_list_django

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  Dockerfile-db
todo_site/accounts/: urls.py  views.py
todo_site/accounts/templates/accounts/: login.html  logout.html  register.html
todo_site/todo_app/: forms.py  models.py  urls.py  views.py  weather_utils.py
todo_site/todo_app/migrations/: 0001_add_todo_model.py  0002_import_cities.py  0003_add_city_country_to_todo.py  0004_add_saved_temperature_saved_weather.py
todo_site/todo_app/static/todo_app/: todo_app.js
todo_site/todo_app/static/todo_app/js/: create_todo.js  todo_list.js
todo_site/todo_app/templates/todo_app/: base.html  create_todo.html  todo_element.html  todo_list.html
todo_site/todo_site/: settings.py  urls.py
todo_site/todo_site/settings/: base.py
todo_site/todo_site/templates/: base.html
