[tool.poetry]
name = "todo-list-django"
version = "0.1.0"
description = "Django TODO application"
authors = ["Igor Pejic <igor.pejic@dr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg = "^3.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
